--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
-#rock {
-  width: 50px;
+#playerSCore {
+  padding-right: 40px;
+}
+
+.paddingTop {
+  margin-top: 20px;
+}
+#footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
 }
